Check if the file is writable when exporting to HTML.

Without this change the program would crash if you couldn't write to the
specified file (for instance when you don't have write permissions in the path
in question).

REVIEW: 113490
BUG: 238022